deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
     name: nginx-deployment

spec:

   replicas: 2
   selector:
           matchLabels:
                   app: nginx
   template:
           metadata:
                name: nginx-app
                labels:
                   app: nginx
           spec:
                containers:
                      - name: nginx
                        image: nginx
