deployment-withvolume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
     name: nginx-deployment

spec:

   replicas: 2
   selector:
           matchLabels:
                   app: nginx
   template:
           metadata:
                name: nginx-app
                labels:
                   app: nginx
           spec:
                containers:
                      - name: nginx
                        image: nginx
                        volumeMounts:
                            - name: test-volume
                              mountPath: /test-pd

                volumes:
                  - name: test-volume
                    hostPath:
                            path: /ronny
