service-nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
      name: nginx-service

spec:
    type: NodePort
    ports:
         - port: 80
           targetPort: 80
           nodePort: 30800
    selector:
       app: nginx
