nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
        name: nginx-ingress
        annotations:
                nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
   rules:
      - host: kubernetes.rrajpoot.xyz
        http:
             paths:
                - path: /
                  backend:
                       serviceName: nginx
                       servicePort: 80
